force-app/main/default/src/objects/HealthCloudGA__AssessmentSchedulingSettings__mdt/HealthCloudGA__AssessmentSchedulingSettings__mdt.object-meta.xml
<CustomObject>
    <label>AssessmentSchedulingSettings</label>
    <pluralLabel>AssessmentSchedulingSettings</pluralLabel>
</CustomObject>