force-app/main/default/src/objects/HealthCloudGA__AssessmentSchedulingSettings__mdt/fields/HealthCloudGA__CareProgramId__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__CareProgramId__c</fullName>
    <label>CareProgramId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>