force-app/main/default/src/objects/HealthCloudGA__AssessmentSchedulingSettings__mdt/fields/HealthCloudGA__PatientSurveyDurationDays__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__PatientSurveyDurationDays__c</fullName>
    <label>PatientSurveyDurationDays</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>