force-app/main/default/src/objects/HealthCloudGA__AssessmentSchedulingSettings__mdt/fields/HealthCloudGA__SurveyName__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SurveyName__c</fullName>
    <label>SurveyName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>