force-app/main/default/src/objects/HealthCloudGA__AssessmentSchedulingSettings__mdt/fields/HealthCloudGA__TaskAssignmentUser__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__TaskAssignmentUser__c</fullName>
    <label>TaskAssignmentUser</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>